# paude

./: CONTRIBUTING.md  KNOWN_ISSUES.md  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
containers/paude/: Dockerfile  credential-watchdog.sh  entrypoint-session.sh
containers/proxy/: Dockerfile  squid.conf
docs/: CONFIGURATION.md  OPENSHIFT.md  ROADMAP.md
src/paude/: __init__.py  cli.py  constants.py  domains.py  dry_run.py  environment.py  git_remote.py  hash.py  mounts.py  session_status.py  workflow.py
src/paude/agents/: __init__.py  base.py  claude.py  cursor.py  gemini.py
src/paude/backends/: base.py  podman.py  shared.py
src/paude/backends/openshift/: __init__.py  backend.py  build.py  pods.py  proxy.py  resources.py  sync.py
src/paude/backends/podman/: __init__.py  backend.py  exceptions.py  helpers.py  proxy.py
src/paude/cli/: __init__.py  app.py  commands.py  config_cmd.py  create.py  domains.py  help.py  helpers.py  remote.py  status.py
src/paude/config/: __init__.py  claude_layer.py  dockerfile.py  models.py  parser.py  resolver.py  user_config.py
src/paude/container/: build_context.py  image.py  runner.py
tests/: test_agents.py  test_allow_domain.py  test_backends.py  test_blocked_domains.py  test_build_context.py  test_cli.py  test_config.py  test_container.py  test_credential_watchdog.py  test_domains.py  test_dry_run.py  test_entrypoint_seed_copy.py  test_environment.py  test_git_remote.py  test_integration.py  test_mounts.py  test_openshift_backend.py  test_podman_session.py  test_session_status.py  test_squid_config.py  test_user_config.py  test_version.py  test_workflow.py
tests/integration/: conftest.py  test_podman_backend.py
