[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paude"
version = "0.9.1rc4"
description = "Podman wrapper for running Claude Code in isolated containers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ben Browning" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
paude = "paude.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/paude"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
]
ignore = [
    "S603",  # subprocess calls - expected for podman wrapper
    "S607",  # partial executable path - expected for podman/git
    "S310",  # URL open audit - expected for feature downloader
    "S202",  # tarfile extractall - expected for feature extraction
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # assert in tests is expected
    "S108",  # hardcoded tmp paths are fine in tests
    "E501",  # long lines in test signatures are acceptable
]
"src/paude/config/dockerfile.py" = [
    "E501",  # long lines in Dockerfile shell commands
]
"src/paude/platform.py" = [
    "A005",  # intentionally named to match domain concept
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --ignore=tests/integration"
markers = [
    "integration: integration tests requiring real infrastructure",
    "podman: tests requiring real podman installation",
    "kubernetes: tests requiring kubernetes cluster (Kind or OpenShift)",
]
